<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity"
    tools:layout_editor_absoluteY="81dp">


    <Button
        android:id="@+id/buttonGuess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/guess"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextGuess" />

    <EditText
        android:id="@+id/editTextGuess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:digits="abcdefghijklmnopqrstuvwxyzæøåABCDEFGHIJKLMNOPQRSTUVWXYZÆØÅ"
        android:ems="2"
        android:inputType="text"
        android:maxLength="1"
        android:text=""
        app:layout_constraintStart_toStartOf="@+id/textViewWord"
        app:layout_constraintTop_toBottomOf="@+id/textViewWord" />

    <TextView
        android:id="@+id/textViewWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="30dp"
        android:text="[ordet]"
        app:layout_constraintStart_toStartOf="@+id/buttonGuess"
        app:layout_constraintTop_toBottomOf="@+id/textViewLettersUsed" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewErrors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="28dp"
        android:text="0 Fejl"
        app:layout_constraintEnd_toEndOf="@+id/imageViewHangingMan"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewLettersUsed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:text="[]"
        app:layout_constraintStart_toStartOf="@+id/textViewErrorLettersDisplayedHere"
        app:layout_constraintTop_toBottomOf="@+id/textViewErrorLettersDisplayedHere" />

    <TextView
        android:id="@+id/textViewErrorLettersDisplayedHere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="113dp"
        android:text="@string/wrong_letters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewHangingMan"
        android:layout_width="98dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewErrors"
        app:layout_constraintStart_toStartOf="@+id/buttonBack"
        app:layout_constraintTop_toBottomOf="@+id/buttonBack"
        app:srcCompat="@drawable/wrong1" />


</android.support.constraint.ConstraintLayout>